--- a/w-1-1/W1-1作业.md
+++ b/w-1-1/W1-1作业.md
@@ -1,16 +1,34 @@
+# 注: 各项作业均有截图 在 /w-1-1/W1-1作业.assets/ 中
 # 一 , 安装 Metamask、并创建好账号
 
 安装MetaMask钱包(此前已有),创建新账户,添加OK测试链,到fauset领取测试币.
-
-![](https://github.com/sinycat/OK_DengLian_Learn_SmartChain/blob/main/w-1-1/W1-1%E4%BD%9C%E4%B8%9A.assets/1.png)
+钱包地址为: 0x2B9307006C93771566dB659aA38456fe6127a484
 
 # 二 ,执行一次转账
-
+转账1个OKT 由: 0x2B9307006C93771566dB659aA38456fe6127a484 至:0x910666103d06a21c801e0dd14aba1c15cb9490f5
 转账hash:   FA0643B6C0641D298812A12D569682E9217524268F62446FC1C5FEC388F18AE4 
 
+# 三  , 使用 Remix 创建任意一个合约并部署到OKChain TestNet
+交易hash为:3E4AB415A0BF390EC04FBE0A144C9EF40796D10F2D47F44E3A29B27C82042CB0
+合约地址为:0x994a752f16d500f70bebc3dc8ba3e4bfa40a8888
 
+合约代码如下:
+```javascript
+// SPDX-License-Identifier: GPL-3.0
+pragma solidity ^0.8.0;
 
-# 三  , 使用 Remix 创建任意一个合约
+contract myTestSimple {
+
+  uint  age;
+
+  function  setAge(uint x )  public{
+      age=x;
+  }
+  function  getAge()  public view returns(uint)   {
+      return age;
+  }
+
+}
 
 
 
