--- a/w-1-1/W1-1作业.md
+++ b/w-1-1/W1-1作业.md
@@ -30,6 +30,81 @@ contract myTestSimple {
 
 }
 
+# 四 , VSCode IDE 开发环境配置
+此前已配置,详见截图
+
+# 五, 使用 Truffle 部署 Counter 合约 到 test 网络（goerli）（提交交易 hash）
+
+truffle合约部署到Rinkeby测试网
+交易hash : 0xa67ccd6b57cc42653dd80169ae4095ea2d4bc02e4dd2ead3e190991df78fc057
+合约地址: 0x7fabae66beb6b3a7a201837024b43957b7564425
+
+# 六 , 编写一个测试用例
+
+在 d:/code/truffle/TestCounter中 
+执行命令: truffle init 创建truffle工程
+在vscode中,编写Counter.sol合约,代码如下:
+```javascript
+// SPDX-License-Identifier: GPL-3.0
+pragma solidity ^0.8.0; 
+contract Counter { 
+ uint public counter; 
+ constructor() { 
+ counter = 0; 
+ } 
+ function count() public { 
+ counter = counter + 1; 
+ } 
+}
+
+在test中,编写测试代码test.js,代码如下:
+```javascript
+var Counter=artifacts.require('Counter');
+
+contract('Counter',function(accounts){
+  var CounterIstance;
+  it('Counter',function(){
+    return Counter.deployed().then(function(instance){
+      CounterIstance = instance;
+      return CounterIstance.count();
+    }).then(function(){
+      return CounterIstance.counter();
+    }).then(function(count){
+      assert.equal(count, 1);
+    })
+  })
+})
+
+打开Ganache节点运行工具 http://127.0.0.1:7545
+在命令行中运行命令: truffle compile 编译代码
+在命令行中运行命令: truffle migrate 部署代码
+在命令行中运行命令: truffle test 测试代码
+
+命令行测试成功!
+运行及返回代码如下:
+```javascript
+truffle(develop)> test
+Using network 'develop'.
+
+
+Compiling your contracts...
+===========================
+> Compiling .\contracts\Counter.sol
+> Compiling .\contracts\Migrations.sol
+> Artifacts written to C:\Users\sinycat\AppData\Local\Temp\test--69972-PZs1C3EidWGD
+> Compiled successfully using:
+   - solc: 0.8.11+commit.d7f03943.Emscripten.clang
+
+
+
+  Contract: Counter
+    √ Counter (467ms)
+
+
+  1 passing (682ms)
+
+
+
 
 
 
