--- a/w-1-1/W1-1作业.md
+++ b/w-1-1/W1-1作业.md
@@ -29,6 +29,7 @@ contract myTestSimple {
   }
 
 }
+```
 
 # 四 , VSCode IDE 开发环境配置
 此前已配置,详见截图
@@ -56,6 +57,7 @@ contract Counter {
  counter = counter + 1; 
  } 
 }
+```
 
 在test中,编写测试代码test.js,代码如下:
 ```javascript
@@ -74,8 +76,8 @@ contract('Counter',function(accounts){
     })
   })
 })
-
-打开Ganache节点运行工具 http://127.0.0.1:7545
+```
+打开Ganache节点运行工具 运行在节点 http://127.0.0.1:7545
 在命令行中运行命令: truffle compile 编译代码
 在命令行中运行命令: truffle migrate 部署代码
 在命令行中运行命令: truffle test 测试代码
@@ -103,7 +105,7 @@ Compiling your contracts...
 
   1 passing (682ms)
 
-
+```
 
 
 
