--- a/w-1-1/W1-1作业.md
+++ b/w-1-1/W1-1作业.md
@@ -37,7 +37,7 @@ contract myTestSimple {
 # 四 , VSCode IDE 开发环境配置
 此前已配置,详见截图
 
-# 五, 使用 Truffle 部署 Counter 合约 到 test 网络（goerli）（提交交易 hash）
+# 五, 使用 Truffle 部署 Counter 合约 到 test 网络（Rinkeby）（提交交易 hash）
 
 truffle合约部署到Rinkeby测试网
 交易hash : 0xa67ccd6b57cc42653dd80169ae4095ea2d4bc02e4dd2ead3e190991df78fc057
