--- a/w2-2/w2-2作业提交.md
+++ b/w2-2/w2-2作业提交.md
@@ -1,2 +1,204 @@
-# 编写⼀个Bank合约：
+# 编写合约Score，⽤于记录学⽣（地址）分数
+
+### 满足以下条件:
+
+   * 仅有⽼师（⽤modifier权限控制）可以添加和修改学⽣分数
+
+   * 分数不可以⼤于 100； 
+
+   * 其他: 设置添加老师的方法,以确定哪些合约地址可以设置为老师.
+
+     
+
+     #### 合约部署至Rinkeby测试网 地址为: [0xC4BAaB3c3E778A4423b45D0359d8C9D9d7C1Ed97](https://rinkeby.etherscan.io/address/0xc4baab3c3e778a4423b45d0359d8c9d9d7c1ed97#code)
+
+     
+
+     代码如下:
+
+     ```javascript
+     // SPDX-License-Identifier: MIT
+     pragma solidity ^0.8.0;
+     
+     contract Score{
+     
+         address public owner;
+         mapping (address=>bool) public teachers;
+     
+         mapping(address=>uint)  scores;
+     
+         constructor (){
+             owner=msg.sender;
+         }
+     
+         //only teacher  can set score
+         modifier onlyTeacher() { 
+             require(
+                 teachers[msg.sender],
+                 "Only teacher can use this function ."
+             );
+             _;
+         }
+         //only owner can set teacher  
+         modifier onlyOwner() { 
+             require(
+                 msg.sender== owner,
+                 "Only owner can set teacher."
+             );
+             _;
+         }
+     
+         function setTeacher(address addr) public onlyOwner{
+             teachers[addr]=true;
+         }
+     
+         function setScore(address student , uint score) public onlyTeacher(){
+             require(score<=100,"score can not greater than 100");
+             scores[student]=score;
+         }
+     
+         function getScore(address addr) public view returns(uint){
+             return scores[addr];
+         }
+        
+     
+     }
+     ```
+
+     
+
+     
+
+# 编写合约 Teacher 作为⽼师，通过 IScore 接⼝调⽤修改学⽣分数
+
+### 满足以下条件:
+
+   * 合约创建时候将已经部署的Score合约地址传入,通过IScore接口创建实例.调用方法.
+
+     
+
+#### 合约部署至Rinkeby测试网, 地址为: [0x704f9CE12cE5fb4c76d1F3C3d1682460A0c1DA83](https://rinkeby.etherscan.io/address/0x704f9ce12ce5fb4c76d1f3c3d1682460a0c1da83#code)
+
+代码如下:
+
+```javascript
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+interface IScore{
+
+    function setScore(address student , uint score) external ;
+
+}
+
+contract teacher{
+
+    //owner
+    IScore scoreContract;
+
+    //部署时候传入Score合约地址
+    constructor (address addr){
+        scoreContract=IScore(addr);
+
+    }
+
+    function setScore(address student , uint score) public{
+        return scoreContract.setScore(student,score);
+
+    }
+
+}
+```
+
+
+
+# 测试
+
+#### 两个合约部署后, 先在Score合约中调用`setTeacher()`方法,设置Teacher合约地址为teacher . 
+
+测试hash及内容如下: 
+
+```javascript
+Transaction Hash:
+0xde6bd84609952d71ea080a51410ac939e60b121cae2da25d3b7234ed034b61ad 
+Status:
+Success
+Block:
+10270623 3 Block Confirmations
+Timestamp:
+1 min ago (Mar-04-2022 03:23:54 PM +UTC)
+From:
+0x2b9307006c93771566db659aa38456fe6127a484 
+To:
+Contract 0xc4baab3c3e778a4423b45d0359d8c9d9d7c1ed97 
+Value:
+0 Ether ($0.00)
+Transaction Fee:
+0.000046289000786913 Ether ($0.00)
+Gas Price:
+0.000000001000000017 Ether (1.000000017 Gwei)
+Gas Limit & Usage by Txn:
+69,433 | 46,289 (66.67%)
+Gas Fees:
+Base: 0.000000017 Gwei |Max: 1.000000036 Gwei |Max Priority: 1 Gwei
+Burnt & Txn Savings Fees:
+🔥 Burnt: 0.000000000000786913 Ether ($0.00)💸 Txn Savings: 0.000000000000879491 Ether ($0.00)
+Others:
+Txn Type: 2 (EIP-1559) Nonce: 242 Position: 62
+Input Data:
+Function: setTeacher(address addr)
+
+MethodID: 0x176366c4
+[0]:  000000000000000000000000704f9ce12ce5fb4c76d1f3c3d1682460a0c1da83
+
+```
+
+
+
+#### 然后即可在Teacher合约中调用`setScore`方法,传入学生地址和分数score,进行设置.
+
+测试hash及内容如下:
+
+```javascript
+Transaction Hash:
+0x9c479c06840582a074fafeff92d35d449befcfa7d85225886c3585f33a1498f2 
+Status:
+Success
+Block:
+10270648 2 Block Confirmations
+Timestamp:
+52 secs ago (Mar-04-2022 03:30:09 PM +UTC)
+From:
+0x2b9307006c93771566db659aa38456fe6127a484 
+To:
+ Contract 0x704f9ce12ce5fb4c76d1f3c3d1682460a0c1da83 
+Value:
+0 Ether ($0.00)
+Transaction Fee:
+0.000052601000683813 Ether ($0.00)
+Gas Price:
+0.000000001000000013 Ether (1.000000013 Gwei)
+Gas Limit & Usage by Txn:
+79,434 | 52,601 (66.22%)
+Gas Fees:
+Base: 0.000000013 Gwei |Max: 1.000000026 Gwei |Max Priority: 1 Gwei
+Burnt & Txn Savings Fees:
+🔥 Burnt: 0.000000000000683813 Ether ($0.00)💸 Txn Savings: 0.000000000000683813 Ether ($0.00)
+Others:
+Txn Type: 2 (EIP-1559) Nonce: 243 Position: 94
+Input Data:
+Function: setScore(address student, uint256 score)
+
+MethodID: 0xee0fcc75
+[0]:  000000000000000000000000910666103d06a21c801e0dd14aba1c15cb9490f5
+[1]:  0000000000000000000000000000000000000000000000000000000000000050
+
+```
+
+
+
+调用`setScore`函数完成后,即可在Score合约中查询设置的score数值. 
+
+查询调用`getScore`函数如下:
+![getScore](https://github.com/sinycat/image1/blob/main/%E6%90%9C%E7%8B%97%E6%88%AA%E5%9B%BE20220304233723.png)
 
